# Axon_V2.1

./: .gitignore  README.md  collect_benign_pe.py  feature_extractor_enhanced.py  finetune.py  main.py  pretrain.py  requirements.txt  scanner.py  scanner_service.py
C++/: CMakeLists.txt  vcpkg.json
C++/docs/: dll_usage.md
C++/examples/: CMakeLists.txt  kvd_scan_loader.cpp  scan_path.cpp
C++/include/kvd/: api.h
C++/src/: CMakeLists.txt  api.cpp  config.cpp  config.h  family_classifier.cpp  family_classifier.h  features.h  features_byte_sequence.cpp  features_file_attributes.cpp  features_file_attributes.h  features_pe.cpp  features_statistics.cpp  features_statistics.h  kvd.def  kvd_internal.h  lightgbm_infer.cpp  lightgbm_infer.h  malware_scanner.cpp  malware_scanner.h  sha256.cpp  sha256.h  util_filesystem.cpp  util_filesystem.h
config/: config.py
data/: dataset.py
features/: extractor_in_memory.py  extractor_save.py  statistics.py
hdbscan_cluster_results/: cluster_statistics.json  family_classifier.pkl  family_names_mapping.json
models/: family_classifier.py  gating.py  routing_model.py
reports/: automl_comparison.json  routing_evaluation_report.txt
saved_models/: gating_model.pth  lightgbm_model.txt  lightgbm_model_normal.txt  lightgbm_model_packed.txt
training/: automl.py  data_loader.py  evaluate.py  export_family_classifier_json.py  feature_io.py  incremental.py  model_io.py  train_lightgbm.py  train_routing.py
utils/: logging_utils.py  path_utils.py
validation/: feature_gating_experiment.py  gating_validator.py  learning_rate_sweep.py  model_complexity_lr_grid.py  warmup_experiment.py
